--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -271,7 +271,7 @@
                     <li><a href="terms-of-service.html">Terms of Service <i class="fas fa-chevron-right"></i></a></li>
                     <li><a href="privacy-policy.html">Privacy Policy <i class="fas fa-chevron-right"></i></a></li>
                     <li><a href="#">Cookie Policy <i class="fas fa-chevron-right"></i></a></li>
-                    <li><a href="#">DMCA <i class="fas fa-chevron-right"></i></a></li>
+                    <li><a href="./DMCA.html">DMCA <i class="fas fa-chevron-right"></i></a></li>
                 </ul>
                 
                 <div class="social-links">
