--- a/channels/WWE.html
+++ b/channels/WWE.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;600;700&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="../stylechannel.css">
 </head>
 <body>
     <!-- Mobile Menu -->
@@ -82,11 +83,11 @@
 
     <!-- Stream Section -->
     <section class="stream-section">
-        <h1>Sky-Sports Live</h1>
+        <h1>WWE Live</h1>
         <div class="stream-container">
             <!-- In the stream-section, modify the stream-wrapper div to include controls -->
 <div class="stream-wrapper">
-    <iframe class="stream-iframe" src="//stream.crichd.sc/update/skys4.php" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="stream-iframe" src="//Pending" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <div class="stream-controls">
         <button class="control-btn play-pause-btn" title="Play/Pause">
             <i class="fas fa-play"></i>
