--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 </button>
                 <button class="btn btn-secondary btn-lg">
                     <i class="ri-article-fill"></i> Terms Of Services
+                    <a href="./Terms.html"></a>
                 </button>
             </div>
         </div>
