--- a/channels/Euro-Sports.html
+++ b/channels/Euro-Sports.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;600;700&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="../stylechannel.css">
 </head>
 <body>
     <!-- Mobile Menu -->
@@ -82,7 +83,7 @@
 
     <!-- Stream Section -->
     <section class="stream-section">
-        <h1>Fox-Sports Live</h1>
+        <h1>Euro-Sports Live</h1>
         <div class="stream-container">
             <!-- In the stream-section, modify the stream-wrapper div to include controls -->
 <div class="stream-wrapper">
