--- a/channels/Ten-Sports.html
+++ b/channels/Ten-Sports.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;600;700&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="../stylechannel.css">
 </head>
 <body>
     <!-- Mobile Menu -->
