--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </div>
         
         <div class="mobile-menu-links">
-            <a href="#" class="active"><i class="fas fa-home"></i> Home</a>
+            <a href="" class="active"><i class="fas fa-home"></i> Home</a>
             <a href="#"><i class="fas fa-fire"></i> Popular</a>
-            <a href="#"><i class="fas fa-futbol"></i> Football/NFL</a>
+            <a href=""><i class="fas fa-futbol"></i> Football/NFL</a>
             <a href="#"><i class="fas fa-baseball-ball"></i> Baseball</a>
             <a href="#"><i class="fas fa-basketball-ball"></i> Basketball</a>
             <a href="#"><i class="fas fa-hockey-puck"></i> Hockey</a>
@@ -84,13 +84,12 @@
             <h1>HD sports streaming. Smooth & reliable.</h1>
             <p>"Access top-tier sports action with seamless streaming, powered by trusted hosts. Stay in the game with smooth playback and premium coverage—whenever, wherever."</p>
             <div class="hero-buttons">
-                <button class="btn btn-primary btn-lg">
+                <a href="./allsports.html">                <button class="btn btn-primary btn-lg">
                     <i class="fas fa-play"></i> Popular Streams
-                </button>
-                <button class="btn btn-secondary btn-lg">
+                </button></a>
+                <a href="./Terms.html"><button class="btn btn-secondary btn-lg">
                     <i class="ri-article-fill"></i> Terms Of Services
-                    <a href="./Terms.html"></a>
-                </button>
+                </button></a>
             </div>
         </div>
     </section>
