--- a/allsports.html
+++ b/allsports.html
@@ -88,6 +88,7 @@
         </div>
         
         <div id="sports-container" class="sports-grid"></div>
+        <div id="match-list" class="match-list"></div>
     </section>
 
      <!-- About Section -->
@@ -204,9 +205,7 @@
             Reedstreams does not host any of the live stream videos playing on this site. All videos are hosted on external streaming sites that are freely available online. Please contact video hosting providers or media posters for takedown or any DMCA complaints.
         </div>
     </footer>
-
-</body>
- <script>
+    <script>
         // Mobile Menu Toggle
         const mobileMenu = document.getElementById('mobileMenu');
         const openMenuBtn = document.getElementById('openMenuBtn');
@@ -374,5 +373,7 @@
             }
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script src="./main.js"></script>
+</body>
 </html>
