--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             </a>
         </div>
         <div id="sports-container" class="sports-grid"></div>
+        <div id="match-list" class="match-list"></div>
         
 
     </section>
@@ -154,7 +155,7 @@
 
             <!-- Channel 4 -->
             <div class="channel-card">
-                <img src="https://via.placeholder.com/80?text=FOX" alt="Fox 520 HD Logo" class="channel-logo">
+                <!-- <img src="https://via.placeholder.com/80x80.png?text=FOX" alt="Fox 520 HD Logo" class="channel-logo"> -->
                 <h3 class="channel-name">Fox 520 HD</h3>
                 <div class="channel-quality">HD 1080p</div>
                 <div class="channel-language">English</div>
@@ -508,6 +509,7 @@
             }
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script src="./main.js"></script>
 </body>
 </html>
