--- a/allsports.html
+++ b/allsports.html
@@ -82,14 +82,14 @@
         </nav>
     </header>
     <!-- Sports Categories -->
-    <section class="sports-categories">
+    <!-- <section class="sports-categories">
         <div class="section-header">
             <h2 class="section-title">All Sports</h2>
         </div>
         
         <div id="sports-container" class="sports-grid"></div>
-        <div id="match-list" class="match-list"></div>
-    </section>
+        
+    </section> -->
 
      <!-- About Section -->
     <section class="about-section">
